@@ -1,5 +1,7 @@
 2007-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* abbrev.el (define-abbrev-table): Record the variable definition.
+
 	* emacs-lisp/bytecomp.el (byte-compile-file-form-define-abbrev-table):
 	New function.
 
